added /services and /services/namespace/name implementation plus some additional changes to the OpenAPI spec
