# server/go/model_api_item.go
@@ -10,11 +10,12 @@
 package openapi
 
 type ApiItem struct {
+
 	Name string `json:"name"`
 
-	Id string `json:"id"`
+	Namespace string `json:"namespace,omitempty"`
 
-	// Fleet ApiItemFleet `json:"fleet"`
+	Fleet ApiItemFleet `json:"fleet"`
 
 	Service ApiItemService `json:"service"`
 }
@@ -23,8 +24,7 @@ type ApiItem struct {
 func AssertApiItemRequired(obj ApiItem) error {
 	elements := map[string]interface{}{
 		"name": obj.Name,
-		"id":   obj.Id,
-		// "fleet":   obj.Fleet,
+		"fleet": obj.Fleet,
 		"service": obj.Service,
 	}
 	for name, el := range elements {
@@ -33,9 +33,9 @@ func AssertApiItemRequired(obj ApiItem) error {
 		}
 	}
 
-	// if err := AssertApiItemFleetRequired(obj.Fleet); err != nil {
-	// 	return err
-	// }
+	if err := AssertApiItemFleetRequired(obj.Fleet); err != nil {
+		return err
+	}
 	if err := AssertApiItemServiceRequired(obj.Service); err != nil {
 		return err
 	}
